<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/chartDiscreteLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchButton">

    </com.github.mikephil.charting.charts.LineChart>

    <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/chartDiscreteLevel"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/tvParamName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

    </com.github.mikephil.charting.charts.HorizontalBarChart>

    <TextView
        android:id="@+id/tvParamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/title_param"
        app:layout_constraintBottom_toTopOf="@+id/btnDateTimeFrom"
        app:layout_constraintStart_toStartOf="parent" />

    <com.kontakt1.tmonitor.ui.widgets.SwitchButton
        android:id="@+id/switchButton"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sw_checkedColor="@color/colorPrimary"
        app:sw_strokeColor="@color/colorPrimary"
        app:sw_switchCount="2"
        app:sw_textArray="@array/chart_select" />

    <Button
        android:id="@+id/btnDateTimeFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/btnDateFrom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <Button
            android:id="@+id/btnDateTimeTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/btnDateTo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toEndOf="@+id/textView4" />
    <TextView
            android:text="@string/tv_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/btnDateTimeFrom" app:layout_constraintBottom_toBottomOf="@+id/btnDateTimeFrom"/>

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_to"
            app:layout_constraintBottom_toBottomOf="@+id/btnDateTimeTo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnDateTimeTo"
            app:layout_constraintVertical_bias="0.448" />

    <Button
            android:id="@+id/btnToDiagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btnToDiagram"
            app:layout_constraintBottom_toTopOf="@+id/tvParamName"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/last_update"
        app:layout_constraintBottom_toTopOf="@+id/btnDateTimeFrom"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>